revert: 5b52e1d743ed8c99466444a6e6185a4a281ab955

--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "webtoon today design system",
   "private": true,
   "workspaces": [
-    "packages/*",
-    "toast/*",
-    "drawer/*"
+    "packages/*"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
