--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "build:all": "npm run build:toast && npm run build:drawer",
-    "build:toast": "npm run build -w @webtoontoday/toast",
-    "build:drawer": "npm run build -w @webtoontoday/drawer"
+    "build:toast": "npm run build -w toast",
+    "build:drawer": "npm run build -w drawer"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
