refactory: change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "webtoontoday",
+  "name": "design-system",
   "version": "0.1.0",
   "description": "webtoon today design system",
   "private": true,
