chore: use local dependency

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "webtoon today design system",
   "private": true,
   "workspaces": [
+    "configs/*",
     "packages/*"
   ],
   "scripts": {
