--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "workspaces": [
     "configs/*",
-    "packages/*"
+    "packages/**/**"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
