--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "design-system",
   "description": "webtoon today design system",
   "private": true,
+  "version": "0.1.0",
   "workspaces": [
     "configs/*",
     "packages/**/**"
