--- a/package.json
+++ b/package.json
@@ -7,11 +7,17 @@
     "configs/*",
     "packages/**/**"
   ],
+  "files": [
+    "dist",
+    "scripts/postinstall.js",
+    "package*.json"
+  ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "build": "sh scripts/build.sh $npm_config_package"
+    "build": "sh scripts/build.sh $npm_config_package",
+    "postinstall": "node scripts/postinstall.js"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
