--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "build": "sh scripts/build.sh $npm_config_package",
-    "postinstall": "node scripts/postinstall.js"
+    "postinstall": "sh scripts/postinstall.sh"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
