--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^8.0.9",
     "@storybook/react-webpack5": "^8.0.9",
+    "@storybook/storybook-deployer": "^2.8.16",
     "@storybook/test": "^8.0.9",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.18",
