--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,7 +10,7 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  deploy:
+  deploy-storybook:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -40,5 +40,5 @@ jobs:
       - name: build-storybook
         run: npm run build-storybook
       
-      - name: deploy storybook
+      - name: deploy-storybook
         run: npm run deploy-storybook
