Squashed commit of the following:
commit 570a4f6a77991f85fdab58a545c31ef286433e5f
Author: youngmin <youngmin.kim@webtoontoday.com>
Date:   Thu May 16 11:00:11 2024 +0900

    chore: github action git push origin

commit 37744d66abc0135ef1becdf025f1b54e85652168
Author: youngmin <youngmin.kim@webtoontoday.com>
Date:   Tue May 14 18:21:24 2024 +0900

    style: change indent

commit 9b8b1a0ec9ae4b2b708b1f8f6af253f3d8f4208a
Author: youngmin <youngmin.kim@webtoontoday.com>
Date:   Tue May 14 16:25:00 2024 +0900

    feat: release log

commit bfe3d7293a694e722e1cced6b79925e550eba27b
Author: youngmin <youngmin.kim@webtoontoday.com>
Date:   Tue May 14 12:03:19 2024 +0900

    docs: update docs/readme

commit c346f119dae13b7d807fc91a8b2756c05c5001c9
Author: youngmin <youngmin.kim@webtoontoday.com>
Date:   Tue May 14 11:36:48 2024 +0900

    chore: inject js script

commit 32be1f4b3852c89efbdbcc55f3b44759bbc94ed0
Author: youngmin <youngmin.kim@webtoontoday.com>
Date:   Tue May 14 09:32:16 2024 +0900

    feat: docs react app

commit a6a4b3b05cab31a16a4f130634888b8b1debbad2
Author: youngmin <youngmin.kim@webtoontoday.com>
Date:   Mon May 13 16:32:56 2024 +0900

    chore: cicd deploy-storybook

commit 123ad089436e71efd38650dcd27d8f0d96391bea
Author: youngmin <youngmin.kim@webtoontoday.com>
Date:   Mon May 13 16:22:21 2024 +0900

    chore: zip static file

commit c2e1f27ea0cd5906ac9ec1aa0c01400af7a738df
Author: youngmin <youngmin.kim@webtoontoday.com>
Date:   Mon May 13 11:32:31 2024 +0900

    chore: use deploy script

commit cedf363d6edd419fb870d5b50c9b9f137efbd1d4
Author: youngmin <youngmin.kim@webtoontoday.com>
Date:   Mon May 13 11:14:27 2024 +0900

    chore: deploy storybook to aws s3

commit d426fa49d2e7c7f5733ef9a648d866bc1f11faf5
Author: youngmin <youngmin.kim@webtoontoday.com>
Date:   Fri May 10 17:58:17 2024 +0900

    chore: todo deploy shell

commit 4e163f4fe4efa3d500e132a944985264169517ef
Author: youngmin <youngmin.kim@webtoontoday.com>
Date:   Fri May 10 17:52:

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "design-system",
   "description": "webtoon today design system",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "workspaces": [
     "configs/*",
     "packages/**/**"
@@ -15,7 +15,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build",
+    "build-storybook": "sh scripts/build_storybook.sh",
+    "deploy-storybook": "sh scripts/deploy_storybook.sh $npm_config_branch",
+    "build-docs": "cd docs && npm run build",
+    "deploy-docs": "sh scripts/deploy_docs.sh",
     "build": "sh scripts/build.sh $npm_config_package",
     "postinstall": "sh scripts/postinstall.sh"
   },
