--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "sh scripts/build_storybook.sh",
-    "deploy-storybook": "sh scripts/deploy_storybook.sh $npm_config_branch",
+    "deploy-storybook": "sh scripts/deploy_storybook.sh",
     "build-docs": "cd docs && npm run build",
     "deploy-docs": "sh scripts/deploy_docs.sh",
     "build": "sh scripts/build.sh $npm_config_package",
