--- a/docs/package.json
+++ b/docs/package.json
@@ -17,7 +17,7 @@
   "scripts": {
     "start": "HOST=mydomain.com react-scripts start",
     "build": "GENERATE_SOURCEMAP=false CI=false react-scripts build",
-    "release-log": "sh scripts/generate_release_log.sh",
+    "build-release-log": "sh scripts/generate_release_log.sh",
     "deploy-release-log": "sh scripts/deploy-release-log.sh"
   },
   "browserslist": {
