--- a/docs/package.json
+++ b/docs/package.json
@@ -16,7 +16,9 @@
   },
   "scripts": {
     "start": "HOST=mydomain.com react-scripts start",
-    "build": "GENERATE_SOURCEMAP=false CI=false react-scripts build"
+    "build": "GENERATE_SOURCEMAP=false CI=false react-scripts build",
+    "build-release-log": "sh scripts/generate_release_log.sh",
+    "deploy-release-log": "sh scripts/deploy-release-log.sh"
   },
   "browserslist": {
     "production": [
