--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -22,7 +22,9 @@ jobs:
         run: | 
           git config --global user.email ""
           git config --global user.name "design-system-bot"
+          git status
           git add docs/public/RELEASE_LOG.md
+          git status
           git commit -m "Update release log"
           git push
 
