fix: change build release log script

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "deploy-storybook": "sh scripts/deploy_storybook.sh",
     "build-docs": "cd docs && npm run build",
     "deploy-docs": "sh scripts/deploy_docs.sh",
-    "build-release-log": "cd docs && npm run build-release-log",
+    "build-release-log": "cd docs && npm run build-release-log $npm_config_branch",
     "deploy-release-log": "cd docs && npm run deploy-release-log",
     "build": "sh scripts/build.sh $npm_config_package",
     "postinstall": "sh scripts/postinstall.sh"
