--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -16,7 +16,7 @@ jobs:
           fetch-depth: 0
 
       - name: Update Release log
-        run: npm run build-release-log
+        run: npm run build-release-log --branch=${{ github.head_ref }}
       
       - name: Commit Release log
         run: | 
