--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -15,18 +15,29 @@ jobs:
         with:
           fetch-depth: 0
 
+      - name: Git config & checkout git branch
+        run: |
+          git checkout ${{ github.head_ref }}
+          git config --global user.email ""
+          git config --global user.name "design-system-bot"
+
       - name: Update Release log
         run: npm run build-release-log --branch=${{ github.head_ref }}
       
-      - name: Commit Release log
-        run: | 
-          git config --global user.email ""
-          git config --global user.name "design-system-bot"
+      - name: Commit & Push Release log
+        run: |
           git status
           git add docs/public/RELEASE_LOG.md
           git status
           git commit -m "Update release log"
-          git push origin HEAD:${{ github.head_ref }}
+          git push origin ${{ github.head_ref }}
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v1
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ap-northeast-2
 
       - name: Deploy Release log
         run: npm run deploy-release-log
