--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
+    "test-storybook": "test-storybook",
     "build": "sh scripts/build.sh $npm_config_package",
     "postinstall": "sh scripts/postinstall.sh"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.3.3",
     "@rollup/plugin-typescript": "^11.1.5",
+    "@storybook/addon-coverage": "^1.0.3",
     "@storybook/addon-essentials": "^8.0.9",
     "@storybook/addon-interactions": "^8.0.9",
     "@storybook/addon-links": "^8.0.9",
@@ -32,6 +34,7 @@
     "@storybook/react": "^8.0.9",
     "@storybook/react-webpack5": "^8.0.9",
     "@storybook/test": "^8.0.9",
+    "@storybook/test-runner": "^0.18.0",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.18",
     "chromatic": "^11.3.2",
