--- a/docs/package.json
+++ b/docs/package.json
@@ -8,9 +8,11 @@
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@react-oauth/google": "^0.12.1",
     "axios": "^1.6.8",
+    "octokit": "^4.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
+    "react-markdown": "^8.0.7",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
