--- a/package.json
+++ b/package.json
@@ -28,16 +28,18 @@
     "@rollup/plugin-typescript": "^11.1.5",
     "@storybook/addon-coverage": "^1.0.3",
     "@storybook/addon-essentials": "^8.0.9",
-    "@storybook/addon-interactions": "^8.0.9",
+    "@storybook/addon-interactions": "^8.1.1",
     "@storybook/addon-links": "^8.0.9",
     "@storybook/addon-onboarding": "^8.0.9",
     "@storybook/addon-webpack5-compiler-swc": "^1.0.2",
     "@storybook/blocks": "^8.0.9",
+    "@storybook/jest": "^0.2.3",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/react": "^8.0.9",
     "@storybook/react-webpack5": "^8.0.9",
     "@storybook/test": "^8.0.9",
     "@storybook/test-runner": "^0.18.0",
+    "@storybook/testing-library": "^0.2.2",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.18",
     "css-loader": "^7.1.1",
