--- a/packages/dataDisplay/useSortableTable/package.json
+++ b/packages/dataDisplay/useSortableTable/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "sortable-table",
+    "name": "use-sortable-table",
     "version": "0.1.0",
     "main": "./index.js",
     "types": "./index.d.ts",
