chore: append test code

--- a/packages/dataDisplay/useSortableTable/package.json
+++ b/packages/dataDisplay/useSortableTable/package.json
@@ -4,9 +4,11 @@
     "main": "./index.js",
     "types": "./index.d.ts",
     "scripts": {
+        "test": "jest",
         "build": "rollup -c"
     },
     "devDependencies": {
-        "rollup-config": "file: ../../../configs/rollup"
+        "rollup-config": "file: ../../../configs/rollup",
+        "jest-config": "file: ../../../configs/jest"
     }
 }
