--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "package.json"
   ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "test-storybook": "test-storybook",
@@ -24,6 +24,8 @@
     "postinstall": "sh scripts/postinstall.sh"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.24.5",
+    "@babel/preset-typescript": "^7.24.1",
     "@rollup/plugin-typescript": "^11.1.5",
     "@storybook/addon-coverage": "^1.0.3",
     "@storybook/addon-essentials": "^8.0.9",
@@ -39,9 +41,15 @@
     "@storybook/test": "^8.0.9",
     "@storybook/test-runner": "^0.18.0",
     "@storybook/testing-library": "^0.2.2",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^12.1.5",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@types/jest": "^29.5.12",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.18",
     "css-loader": "^7.1.1",
+    "jest": "^29.7.0",
+    "jest-config": "file ./configs/jest",
     "postcss": "^8.4.32",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
