--- a/package.json
+++ b/package.json
@@ -54,5 +54,9 @@
   "peerDependencies": {
     "react": "^17.0.2"
   },
+  "engines": {
+    "node": ">=18.0.0",
+    "npm": ">=10.0.0"
+  },
   "author": "@webtoontoday"
 }
