--- a/docs/package.json
+++ b/docs/package.json
@@ -13,8 +13,12 @@
     "react-dom": "^17.0.2",
     "react-google-login": "^5.2.2",
     "react-markdown": "^8.0.7",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
+  },
+  "overrides": {
+    "nth-check": "^2.0.1",
+    "postcss": "^8.4.31"
   },
   "scripts": {
     "start": "HOST=mydomain.com react-scripts start",
