--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,7 +58,7 @@ jobs:
           git add .
           git commit -m "build all packages" || exit 0
           git push
-          
+
       - name: comment on PR
         uses: actions/github-script@v6
         env:
@@ -70,13 +70,14 @@ jobs:
               const releaseBranch = event.ref;
 
               const bodyString = `Storybook Deployed: https://design-system.webtoon.today/${releaseBranch}`;
-
-              github.issues.createComment({
+              
+              cosnt res = await github.rest.issues.createComment({
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 body: bodyString
               });
+              console.log(res);
             } catch(error) {
               console.error(error);
             }
