--- a/package.json
+++ b/package.json
@@ -57,8 +57,7 @@
     "react": "^17.0.2"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=10.0.0"
+    "node": ">=18.0.0"
   },
   "author": "@webtoontoday"
 }
