--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "storybook": "^8.1.5",
     "style-loader": "^4.0.0",
     "tslib": "^2.6.2",
-    "typescript": "^5.3.2"
+    "typescript": "^5.3.2",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3"
   },
   "overrides": {
     "ip": "^2.0.1"
