--- a/configs/rollup/package.json
+++ b/configs/rollup/package.json
@@ -1,5 +1,10 @@
 {
     "name": "rollup-config",
     "version": "0.1.0",
-    "main": "./src/index.js"
+    "main": "./src/index.js",
+    "devDependencies": {
+        "@rollup/plugin-typescript": "^11.1.5",
+        "rollup-plugin-dts": "^6.1.0",
+        "rollup-plugin-postcss": "^4.0.2"
+    }
 }
