--- a/packages/input/GuideTextBoxs/package.json
+++ b/packages/input/GuideTextBoxs/package.json
@@ -6,6 +6,10 @@
     "scripts": {
         "build": "rollup -c"
     },
+    "dependencies": {
+        "@material-ui/core": "^4.12.4",
+        "@material-ui/icons": "^4.11.3"
+    },
     "devDependencies": {
         "rollup-config": "file: ../../../configs/rollup"
     }
