--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,13 +49,13 @@ jobs:
         run: npm run deploy-storybook
 
       - name: comment on pull request
-        uses: actions/github-script@v3
+        uses: actions/github-script@v7
         env:
           branchName: ${{ github.head_ref }}
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            github.issues.createComment({
+            github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
               repo: context.repo.repo,
