--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -51,16 +51,20 @@ jobs:
       - name: comment on pull request
         uses: actions/github-script@v7
         env:
-          branchName: ${{ github.head_ref }}
+          BRANCH_NAME: ${{ github.head_ref }}
         with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            const success = '${{ job.status }}' === 'success';
-            const body = `Deploy ${success ? '✅' : '❌'}!\n${success ? `🚀 https://design-system.webtoon.today/${process.env.branchName}` : ''}`;
-
-            await github.rest.issues.createComment({
-              issue_number: context.issue.number,
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              body: body
-            })
+            try {
+              const success = '${{ job.status }}' === 'success';
+              const body = `Deploy ${success ? '✅' : '❌'}!\n${success ? `🚀 https://design-system.webtoon.today/${process.env.BRANCH_NAME}` : ''}`;
+  
+              const res = await github.rest.issues.createComment({
+                issue_number: context.issue.number,
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                body: body
+              });
+              console.log(res);
+            } catch (error) {
+              core.setFailed(`❌ Request failed with error ${error}`);
+            }
