--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,20 +50,24 @@ jobs:
 
       - name: comment on pull request
         uses: actions/github-script@v7
-        env:
-          BRANCH_NAME: ${{ github.head_ref }}
         with:
           script: |
             try {
               const success = '${{ job.status }}' === 'success';
-              const body = `Deploy ${success ? '✅' : '❌'}!\n${success ? `🚀 https://design-system.webtoon.today/${process.env.BRANCH_NAME}` : ''}`;
-  
+              const body = `Deploy ${success ? '✅' : '❌'}!\n${success ? `🚀 https://design-system.webtoon.today/${{ github.head_ref }}` : ''}`;
+
+              console.log(context.issue.number);
+              console.log(context.repo.owner);
+              console.log(context.repo.repo);
+              console.log(body);
+          
               const res = await github.rest.issues.createComment({
                 issue_number: context.issue.number,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 body: body
               });
+
               console.log(res);
             } catch (error) {
               core.setFailed(`❌ Request failed with error ${error}`);
