--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,23 +49,24 @@ jobs:
         run: npm run deploy-storybook
 
       - name: comment on pull request
-        uses: actions/github-script@v7
+        uses: actions/github-script@v6
         with:
           script: |
             try {
-              const fs = require('fs')
-              const ev = JSON.parse(fs.readFileSync(process.env.GITHUB_EVENT_PATH, 'utf8'));
-              const prNum = ev.pull_request.number;
+              const issues = await github.rest.pulls.list({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                state: 'open',
+                head: `${context.repo.owner}:${context.ref.replace('refs/heads/', '')}`
+              });
 
-              
+              const prNumber = context.issue.number || issues.data[0].number;
+
               const success = '${{ job.status }}' === 'success';
               const body = `Deploy ${success ? '✅' : '❌'}!\n${success ? `🚀 https://design-system.webtoon.today/release/${${{ github.event.ref }}.slice('/').at(-1)}` : ''}`;
-              
-              console.log(prNum);
-              console.log(body);
 
               const res = await github.rest.issues.createComment({
-                issue_number: context.issue.number,
+                issue_number: prNumber,
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 body: body
