--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,7 +60,7 @@ jobs:
                 head: `${context.repo.owner}:${context.ref.replace('refs/heads/', '')}`
               });
 
-              const prNumber = context.issue.number || issues.data[0].number;
+              const prNumber = context.issue?.number || issues.data[0].number;
 
               const success = '${{ job.status }}' === 'success';
 
