--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,16 +57,15 @@ jobs:
                 owner: context.repo.owner,
                 repo: context.repo.repo,
                 state: 'open',
-                head: `${context.repo.owner}:${context.ref.replace('refs/heads/', '')}`
+                head: `${context.repo.owner}:${'${{github.event.ref}}'.replace('refs/heads/', '')}`
               });
 
               const prNumber = context.issue.number || issues.data[0].number;
 
               const success = '${{ job.status }}' === 'success';
 
-              const urlPath = `${context.ref}`.replace(/^refs\/heads\/release\//,"");
+              const urlPath = '${{github.event.ref}}''.replace(/^refs\/heads\/release\//,"");
 
-              console.log(context.ref);
               console.log(${{github.event.ref}});
 
               const body = `## 🚀Storybook Deploy\n
